--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
+    "gulp-rename": "^1.2.3",
     "gulp-sass": "4.0.x",
     "gulp-svgstore": "^6.1.1",
     "normalize-scss": "^7.0.1",
