--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-rename": "^1.2.3",
     "gulp-sass": "4.0.x",
     "gulp-svgstore": "^6.1.1",
+    "gulp-webp": "^3.0.0",
     "normalize-scss": "^7.0.1",
     "run-sequence": "^2.2.1",
     "stylelint": "9.2.x",
