--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "autoprefixer": "8.3.x",
     "browser-sync": "2.23.x",
     "gulp": "3.9.x",
+    "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
     "gulp-rename": "^1.2.3",
     "gulp-sass": "4.0.x",
-    "gulp-svgstore": "^6.1.1",
     "gulp-webp": "^3.0.0",
     "normalize-scss": "^7.0.1",
     "run-sequence": "^2.2.1",
