--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gulp-postcss": "7.0.x",
     "gulp-rename": "^1.2.3",
     "gulp-sass": "4.0.x",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-svgstore": "^6.1.1",
     "gulp-webp": "^3.0.0",
     "normalize-scss": "^7.0.1",
     "run-sequence": "^2.2.1",
