--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "8.3.x",
     "browser-sync": "2.23.x",
+    "del": "^3.0.0",
     "gulp": "3.9.x",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
